fix: fix input padding latest css fixes for chatwindow results in to much padding in input so that the characters became nearly invisible

--- a/scss/partials/_window.scss
+++ b/scss/partials/_window.scss
@@ -260,7 +260,7 @@
   margin: 0;
   min-height: auto;
   outline: none;
-  padding: 10px 5px 5px 0;
+  padding: 0;
   resize: none;
   transition: height 0.2s;
 
